<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.UserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_my_profile"
        android:textColor="@color/lightGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/text_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/text_email"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/text_password"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhoto"
        android:hint="@string/text_photo"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btnEditProfile"
        android:text="@string/text_edit_profile"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"/>



</LinearLayout>