<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:textColor="@color/lightGreen"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/text_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/text_email"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/text_password"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhoto"
        android:hint="@string/text_photo"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="2dp"/>

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="2dp"/>

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStreet"
        android:hint="@string/text_Street"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btnCreateUser"
        android:text="@string/text_register"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btnLogIn"
        android:text="@string/text_already"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/black"/>
</LinearLayout>