<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/lightGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_content"
        android:textColor="@color/darkGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_log_out"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"
        android:onClick="logout"/>

</LinearLayout>