<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_log_in"
        android:textColor="@color/lightGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/text_email"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/text_password"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_log_in"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btnRegister"
        android:text="@string/text_register"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"/>

</LinearLayout>