<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.PlantActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_plants"
        android:textColor="@color/lightGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/text_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etType"
        android:hint="@string/text_type"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOrigin"
        android:hint="@string/text_origin"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text"/>

    <!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhotos"
        android:hint="@string/text_photos"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:inputType="text" />
    -->

    <ImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/cabbage_vegetables_vegetable_food_agriculture_icon_220781"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/lightGreen"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btnCreatePlant"
        android:text="@string/text_create_plant"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"/>

</LinearLayout>