<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.PlantInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Plant Info"
        android:textColor="@color/lightGreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <ImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/cabbage_vegetables_vegetable_food_agriculture_icon_220781"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/lightGreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/text_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etType"
        android:hint="@string/text_type"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOrigin"
        android:hint="@string/text_origin"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGreen"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btnCopyPlant"
        android:text="COPY PLANT"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"/>


</LinearLayout>